# Quench

./: .gitignore  BUILD_GUIDE.md  Cargo.toml  FEATURES.md  IMPLEMENTATION_REPORT.md  README.md  TEST_REPORT.md  build-installer.bat  build-installer.sh  quick-build.bat  test.txt
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
ui/src/: App.svelte  app.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: main.rs
