[workspace]
members = [
    "core",
    "cli",
    "ui/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["ZipX Team"]

[workspace.dependencies]
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1.37", features = ["fs", "macros", "rt-multi-thread", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
rayon = "1.8"
crossbeam-channel = "0.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crc32fast = "1.3"
hmac = "0.12"
sha2 = "0.10"
zstd = { version = "0.12", features = ["zstdmt"] }
lz4_flex = "0.11"
brotli = "3.3"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"
tauri = { version = "1.8.3", default-features = false, features = ["wry", "dialog-all", "fs-all", "path-all", "protocol-all", "shell-open"] }
tauri-build = { version = "1.5.6" }
tempfile = "3.10"
walkdir = "2.5"
