[package]
name = "zipx-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
crc32fast.workspace = true
hmac.workspace = true
sha2.workspace = true
zstd.workspace = true
lz4_flex.workspace = true
brotli.workspace = true
tar.workspace = true
zip.workspace = true
futures.workspace = true
num_cpus.workspace = true
tempfile.workspace = true
walkdir.workspace = true
