[package]
name = "zipx-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zipx-core = { path = "../../core" }
tokio = { version = "1.37", features = ["fs", "macros", "rt-multi-thread", "io-util", "sync"] }
tracing = "0.1"

[build-dependencies]
tauri-build = { workspace = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
